[package]
name = "slatedb-microbench"
version = "0.1.0"
edition = "2021"

[dependencies]
object_store = "0.11.1"
slatedb = "0.3.0"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "playground"
harness = false
